# ST7735_Linux

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/drawing/: CMakeLists.txt  geom.c  geom.h
lib/spi_macro/: CMakeLists.txt  spi_macro.c  spi_macro.h
lib/st7735/: CMakeLists.txt  st7735.c  st7735.h  testimg.h
src/: main.c
